[package]
name = "homematic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
xrs-xmlrpc = { path = "../../src/xrs/components/xmlrpc", features = ["base64", "reqwest"] }
reqwest = "^0.11.13"
log = "0.4.17"
bitflags = "1.3"

# binary
stderrlog = "0.5.4"
clap = { version = "4.1.1", features = ["derive"] }
comfy-table = "6.1.4"
serde_json = "1.0.91"
